@@ -5,7 +5,11 @@ LDOPTS		= -ldebconfclient -ldebian-installer
 CFLAGS		= -W -Wall -DNDEBUG 
 COMMON_OBJS	= netcfg-common.o wireless.o
 
+WIRELESS	= 1
 ifneq ($(DEB_HOST_ARCH_OS),linux)
+WIRELESS	= 0
+endif
+ifeq ($(DEB_HOST_ARCH),s390)
 WIRELESS	= 0
 endif
 
