@@ -1,5 +1,6 @@
 Template: netcfg/dhcp_hostname
 Type: string
+# :sl1:
 _Description: DHCP hostname:
  You may need to supply a DHCP host name. If you are using
  a cable modem, you might need to specify an account number here.
@@ -8,31 +9,37 @@ _Description: DHCP hostname:
 
 Template: netcfg/dhcp_progress
 Type: text
+# :sl1:
 _Description: Configuring the network with DHCP
 
 Template: netcfg/dhcp_progress_note
 Type: text
+# :sl1:
 _Description: This may take some time.
 
 Template: netcfg/dhcp_success_note
 Type: text
+# :sl1:
 _Description: Network autoconfiguration has succeeded
 
 Template: netcfg/no_dhcp_client
 Type: error
+# :sl2:
 _Description: No DHCP client found
  No DHCP client was found. This package requires pump or dhcp-client.
  .
- The DHCP configuration process will be aborted.
+ The DHCP configuration process has been aborted.
 
 Template: netcfg/dhcp_options
 Type: select
+# :sl1:
 # Note to translators : Please keep your translation
 # below a 65 columns limit (which means 65 characters 
 # in single-byte languages)
 #flag:translate!:4
 __Choices: Retry network autoconfiguration, Retry network autoconfiguration with a DHCP hostname, Configure network manually, ${wifireconf}, Do not configure the network at this time
 Default: Configure network manually
+# :sl1:
 _Description: Network configuration method:
  From here you can choose to retry DHCP network autoconfiguration
  (which may succeed if your DHCP server takes a long time to respond)
@@ -43,12 +50,14 @@ _Description: Network configuration method:
 
 Template: netcfg/dhcp_failed
 Type: note
+# :sl1:
 _Description: Network autoconfiguration failed
  Your network is probably not using the DHCP protocol. Alternatively, the
  DHCP server may be slow or some network hardware is not working properly.
 
 Template: netcfg/no_default_route
 Type: boolean
+# :sl2:
 _Description: Continue without a default route?
  The network autoconfiguration was successful. However, no default route
  was set: the system does not know how to communicate with hosts on the
@@ -61,10 +70,16 @@ _Description: Continue without a default route?
 
 Template: netcfg/internal-wifireconf
 Type: text
+# :sl1:
 _Description: Reconfigure the wireless network
 
 Template: netcfg/dhcp_timeout
-Type: text
+Type: string
 Description: for internal use; can be preseeded
  Timeout for trying DHCP
 Default: 15
+
+Template: netcfg/dhcp_ntp_servers
+Type: text
+Description: for internal use
+ NTP servers provided by DHCP
