@@ -16,3 +16,9 @@ override_dh_installdebconf:
 	   >> debian/netcfg/DEBIAN/templates	
 	(echo ; po2debconf debian/netcfg-static.templates )\
 	   >> debian/netcfg/DEBIAN/templates	
+
+override_dh_gencontrol:
+	 dh_gencontrol -s
+
+override_dh_builddeb:
+	 dh_builddeb -s
