@@ -19,7 +19,14 @@ netcfg (1.52) UNRELEASED; urgency=low
   * Use busybox' udhcpc by default but kfreebsd-amd64 and kfreebsd-i386
     since they lack support in busybox at this moment.
 
- -- Otavio Salvador <otavio@ossystems.com.br>  Tue, 29 Sep 2009 20:17:44 -0300
+  [ Frans Pop ]
+  * Remove no longer needed Lintian override for missing Standards-
+    Version field.
+  * Disable wireless support for s390.
+  * Fix FTBS on s390 caused by upgrade to debhelper v7.
+  * Drop support for the discontinued lpia architecture.
+
+ -- Frans Pop <fjp@debian.org>  Fri, 27 Nov 2009 05:27:44 +0100
 
 netcfg (1.51) unstable; urgency=low
 
